Codigo OAuth2 - security

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,6 +18,12 @@
     <a href="/oauth2/authorization/gibhub"> haz click </a>
 </div>
 </body>
+<div class="container unauthenticated">
+    With GitHub: <a href="/oauth2/authorization/github">click here</a>
+</div>
+<div class="container authenticated" style="display:none">
+    Logged in as: <span id="user"></span>
+</div>
 <script type="text/javascript">
     $.get("/user".function(data) {
     $("#user").html(data.name);
@@ -25,4 +31,5 @@
     $(".unauthenticated").show()
     });
 </script>
+
 </html>
